# hw07

./: .travis.yml  CMakeLists.txt  README.md  bulk.h  bulk_collector.cpp  bulk_collector.h  bulk_logger.cpp  bulk_logger.h  bulk_processor.cpp  bulk_processor.h  bulk_reader.cpp  bulk_reader.h  main.cpp  test_bulk_collector.cpp
